<resources>
    <string name="app_name">SimpleInstagram</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="take_picture">Take Picture</string>
    <string name="submit">Submit</string>
    <string name="description">Description...</string>
    <string name="todo">TODO</string>
    <string name="Description">Description</string>
    <string name="logout">LOGOUT</string>
    <string name="profileimage">profileImage</string>
</resources>