<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="380dp"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="8dp"
        app:srcCompat="@drawable/nav_logo_whiteout"
        tools:layout_editor_absoluteX="56dp" />

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:layout_marginStart="40dp"
        android:layout_marginTop="80dp"
        android:hint="@string/username"
        android:selectAllOnFocus="true" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/password"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_gravity="start"
        android:layout_marginStart="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="64dp"
        android:background="#2196F3"
        android:enabled="true"
        android:text="@string/login"
        android:textColor="@color/white"
        app:backgroundTint="#2196F3" />

    <Button
        android:id="@+id/btnSignup"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_gravity="start"
        android:layout_marginStart="40dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="150dp"
        android:background="#32D335"
        android:backgroundTint="#32D335"
        android:enabled="true"
        android:text="@string/signup"
        android:textColor="@color/white" />
</LinearLayout>