<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


        <ImageView
            android:id="@+id/camera"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:backgroundTint="@color/black"
            android:src="@drawable/camera_shadow_fill"

            app:tint="#737072" />

        <ImageView
            android:id="@+id/logo"
            android:layout_width="400dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"

            android:backgroundTint="@color/black"
            android:src="@drawable/nav_logo_whiteout"
            app:tint="@android:color/black" />

        <ImageView
            android:id="@+id/nav"
            android:layout_width="35dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/black"
            android:src="@drawable/nav_inbox_paper_plane"
            app:tint="@android:color/black" />


        <EditText
            android:id="@+id/etDescription"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_above="@id/btnSubmit"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/Description"
            android:selectAllOnFocus="true" />

        <Button
            android:id="@+id/btnCaptureImage"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/ivPostImage"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:background="#C6C6C6"
            android:text="@string/take_picture"
            android:textColor="@color/black"
            app:backgroundTint="#C6C6C6" />

        <ImageView
            android:id="@+id/ivPostImage"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="20dp"
            tools:srcCompat="@tools:sample/avatars" />

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_above="@id/ivPostImage"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:background="#C6C6C6"
            android:text="@string/submit"
            android:textColor="@color/black"
            app:backgroundTint="#C6C6C6" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp">

            <ImageView
                android:id="@+id/ivHome"
                android:layout_width="4dp"
                android:layout_height="40dp"
                android:backgroundTint="@color/black"
                android:src="@drawable/instagram_home_outline_24"
                app:tint="@android:color/black"
                android:layout_weight="1.5"/>
            <ImageView
                android:id="@+id/ivAdd"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:backgroundTint="@color/black"
                android:src="@drawable/instagram_new_post_outline_24"
                app:tint="@android:color/black"
                android:layout_weight="1"/>
            <ImageView
                android:id="@+id/ivUser"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:backgroundTint="@color/black"
                android:src="@drawable/instagram_user_outline_24"
                app:tint="@android:color/black"
                android:layout_weight="1"/>


        </LinearLayout>
    </RelativeLayout>
</layout>